# ComfyUI-Eagle-Autosend

./: .gitignore  README.md  __init__.py  pyproject.toml
js/: eagle_autosend.js
py/: eagle_api.py  eagle_autosend.py  settings.json  settings.py
